[package]
name = "torrust"
version = "0.1.0"
edition = "2021"

[dependencies]
# === TLS / Crypto ===
rustls = { version = "0.23", features = ["ring"] }

# === Tor / Arti (MODERN) ===
# FIX: Added "static-sqlite" to bundle SQLite source instead of linking system lib.
# Do NOT use the generic "static" feature, as that forces native-tls (OpenSSL).
arti-client = { version = "0.39.0", default-features = false, features = ["tokio", "rustls", "static-sqlite"] }

# === Async Runtime ===
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "signal", "time"] }
futures = "0.3.31"

# === Networking ===
reqwest = { version = "0.12", features = ["socks", "rustls-tls"], default-features = false }
dns-message-parser = "0.9"

# === CLI & Utils ===
clap = { version = "4.5", features = ["derive"] }
rand = "0.9.2"
rand_distr = "0.5"
chrono = "0.4.39"
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "2.0"
libc = "0.2"
rlimit = "0.11"
zeroize = "1.8"
bytes = "1.9"

# === Logging ===
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "unwind"